Progressing on end-to-end documentation on progress